modif ligne 48